# go-c-interface-test

./: .gitignore  CMakeLists.txt  Gopkg.toml  README.md  foo.c  foo.h  go.mod  go.sum  interfaccia.go  interfacciaColonne.go  main.go
.github/workflows/: go.yml
adapter/: downloader.go  types.go
adapter/http/: downloader.go  (+1 more)
async/: schedule_test.go  scheduler.go  types.go
internal/: colreader.go
pkg/: interfaccia.go  interfacciaColonne.go
query/: abstractFileTable.go  abstractFileTable_test.go  executor.go  executor_test.go  fileColReader.go  fileColReader_test.go  fileColWriter.go  fileColWriter_test.go  fileResultSet.go  fileResultSet_test.go  fileTable.go  fileTableManagement.go  fileTableManagement_test.go  fileTable_test.go  fileUtil.go  job.go  query.go  queryFileUtil.go  queryFileUtil_test.go  queryTypes.go  randomDataGenerator.go  randomDataGenerator_test.go  randomForwarder.go  randomForwarder_test.go  rotateReader.go  rotateReader_test.go  rotateWriter.go  rotateWriter_test.go  statement.go  statement_test.go
rscopy/: rsCopyRunnable.go  rsCopyTypes.go
src/: SqlColumnValue.cpp  SqlColumnValue.h  SqlQuery.cpp  SqlQuery.h  SqlTypes.h  dbengine.cpp  dbengine.h
table/: abstractFileTable.go  abstractFileTable_test.go  fileColReader.go  fileColReader_test.go  fileColWriter.go  fileColWriter_test.go  fileResultSet.go  fileResultSet_test.go  fileTable.go  fileTable_test.go  queryTypes.go  randomDataGenerator.go  randomDataGenerator_test.go  rotateReader.go  rotateReader_test.go  rotateWriter.go  rotateWriter_test.go  statement.go
utility/: fileutil.go
(+4 files in other folders)
